[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/UI/InGameMenu.gd" type="Script" id=1]
[ext_resource path="res://Graphics/UI/Button_pressed.png" type="Texture" id=2]
[ext_resource path="res://Graphics/UI/Button.png" type="Texture" id=3]
[ext_resource path="res://Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 13
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 15, 15 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 15, 15 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 15, 15 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 15, 15 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 15, 15 )

[node name="InGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
visible = true
margin_right = 40.0
margin_bottom = 40.0

[node name="resume" type="Button" parent="Popup"]
margin_left = 105.0
margin_top = 62.0
margin_right = 215.0
margin_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Fortfahren"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="saveGame" type="Button" parent="Popup"]
visible = false
margin_left = 110.433
margin_top = 79.2853
margin_right = 185.433
margin_bottom = 99.2853
text = "Speichern"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="toMainMenu" type="Button" parent="Popup"]
margin_left = 105.0
margin_top = 87.0
margin_right = 215.0
margin_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Zum Men√º"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[connection signal="pressed" from="Popup/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Popup/saveGame" to="." method="_on_saveGame_pressed"]
[connection signal="pressed" from="Popup/toMainMenu" to="." method="_on_toMainMenu_pressed"]
